views/css/base.css
html
{
	padding: 0 24px;
}

body
{
	/*max-width:480px;*/
	margin:60px auto;
	line-height: 24px;
	font-family:'Avenir Next','Helvetica Neue',Helvetica,Arial,sans-serif
}

div[role='main']
{
	margin: 0 auto;
	max-width: 480px;
}

nav
{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #eee;
  padding: 0px;
  padding-left: 0px;
}

nav h1
{
  color: black;
  font-size: 16px;
  line-height: 16px;
  margin: 6px;
}


h1,h2
{
	font-weight:500;
	margin-bottom: 24px;
}

h2
{
	margin-bottom: 12px;
}

ul
{
	margin-bottom: 24px;
}

li
{
	margin: 12px 0;
}

a
{
	text-decoration: none;
	color: #3892E3;
}

footer
{
	margin-top:36px;
	border-top:1px solid #000;
	font-size:small;
	line-height: 18px;
}

#short-description
{
	text-align: center;
	color: #777;
	margin-bottom: 24px;
}

.tabs
{
	list-style-type: none;
	padding-bottom: 5px;
	border-bottom: 1px solid gray;
	text-align:right;
	padding-top: 48px;
	margin-bottom: 48px;
}

.tabs li
{
	/*display: inline;*/
	border-top: 1px solid gray;
	border-left: 1px solid gray;
	border-right: 1px solid gray;
	margin-right: 6px;
	padding: 6px 12px;
	border-radius: 6px 6px 0 0 ;
	background-color: #eee;
	float:right;
	margin-top: -32px;
}

li.selected
{
	background-color: #ccc;
	color: white;
	padding-bottom: 7px;
}

.invisible
{
	display:none;
}

@media all and (max-width: 400px)
{
  .tabs
  {
    font-size: 14px;
    padding-bottom: 0;
  }
  .tabs li
  {
  	padding: 3px 6px;
  	margin-right: 2px;
  	/*margin-4ttom: -1px;*/
  }
  li.selected
  {
  	padding-bottom: 5px;
  }

}

